# tacppd

./: .gitignore  AUTHORS  BUGS  Build.sh  CHANGES  COPYING  Doxyfile  FAQ.html  INSTALL  Makefile.in  README.md  ReleaseNotes  THANKS  TODO  config.h  configure  configure.in  mkinstalldirs  tacppd.1  tacppd_start.sh  tacppd_start.sh.example  version.h
contrib/: MD5-1.7+TACPW.tgz  README.md  crypt_pw.pl  debitcard.0.0.2.tcl
db/: Makefile.in  OCCI.build  OCI.build  README.md  README.xml-db  msql.cc  mysql.cc  none.cc  occi.cc  oci.cc  pgsql.cc  uodbc.cc  xml-db.cc
db/ddk/: README.md  bool2char.cc  char2bool.cc  char2time.cc  iso2time.cc  sample.cc  time2char.cc  time2iso.cc
doc/: BuildDoc.sh  DeveloperGuide.lyx  DeveloperGuide.tex  DeveloperGuide.txt  README.md  SNMP-VOIP  SNMP.txt  SNMP_OIDS  UserGuide.lyx  UserGuide.tex  UserGuide.txt  tac_plus.rfc.1.78.txt  voip-gk-nm.webarchive  voip1.webarchive
etc/: README.md  tacpp-db-desc.xml  tacppd.cf.xml  tacppd.conf.ex  xml-db.xml.ex
ext/: README.md
http/: README.md  invalid_file.html
http/admin/: help.html  index.html  invalid_auth.html  menu.html  workplace.html
http/admin/doc/: index.html
http/admin/nfdb/: index.pl  lpmx_nf.txt
http/admin/nfdb/config/: lpmx_config.pl.ex
http/admin/nfdb/dictionary/English/: my_common.pl
http/admin/nfdb/dictionary/Russian/: index.pl  my_common.pl
http/admin/nfdb/lib/: lpmx.css  lpmx.js
http/admin/nfview/: index.pl  moredetail.pl
http/admin/nfview/config/: lpmx_config.pl.ex
http/admin/nfview/dictionary/: read.me
http/admin/nfview/dictionary/English/: my_common.pl
http/admin/nfview/dictionary/Russian/: my_common.pl
http/admin/nfview/lib/: My_Sub.pm  lpmx.js
http/admin/tci/: index.html  initdb.pl  showcf.pl  showusers.pl  tci.conf.example  writecf.pl
http/admin/test/: env.pl  false.html  getform.html  getform2.html  image.html  index.html  ok.html  postform.html  postform2.html  test.pl
http/admin/test/java/: index.html  test.java
http/admin/webdb/: acc.pl  acc_save.pl  avp.pl  avp_save.pl  cmd.pl  cmd_save.pl  edit.pl  index.pl  save.pl
http/admin/webdb/config/: lpmx_config.pl.example
http/admin/webdb/dictionary/: read.me
http/admin/webdb/dictionary/English/: acc.pl  avp.pl  cmd.pl  edit.pl  index.pl  my_common.pl  save.pl
http/admin/webdb/dictionary/Russian/: acc.pl  avp.pl  cmd.pl  edit.pl  my_common.pl  save.pl
http/admin/webdb/lib/: My_Sub.pm  lpmx.css  lpmx.js  print_form.pl
http/user/: index.html
include/: db_module.h  ipaddr.h  snmp_module.h
log/: README.md
lpmx/: README.md  lpmx.conf  lpmx.pl  lpmx_ck.pl  lpmx_nf.pl  lpmx_nf.txt
resrc/: Makefile.in  README.md  sc-per-time.cc
run/: README.md
snmp/: Makefile.in  README.md  cisco-asy.cc  cisco-e1.cc  cisco-trf.cc  cisco.cc  none.cc
snmp/ddk/: README.md
src/: AAA.cc  AAA.h  AModify.cc  AModify.h  App.cc  App.h  Cli.cc  Cli.h  Command.cc  Command.h  CoreAccess.cc  CoreAccess.h  CoreBilling.cc  CoreBilling.h  CoreBundle.cc  CoreBundle.h  CoreData.cc  CoreData.h  CoreDb.cc  CoreDb.h  CoreDebug.cc  CoreDebug.h  CoreDevice.cc  CoreDevice.h  CoreListener.cc  CoreListener.h  CoreManager.cc  CoreManager.h  CorePeer.cc  CorePeer.h  CorePool.cc  CorePool.h  CryptoCard.cc  CryptoCard.h  DLoad.cc  DLoad.h  Daemon.cc  Daemon.h  Debug.cc  Debug.h  (+52 more)
tacppd.xcodeproj/: project.pbxproj
tacppd.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
tests/: README.md
